# Bitcoin-5-Minute-Candle-Direction-Prediction

./: .gitignore  README.md  pyproject.toml
btc_prediction/: __init__.py
btc_prediction/config/: settings.py
btc_prediction/features/: __init__.py  advanced.py  cross_asset.py  microstructure.py  onchain.py  store.py  technical.py
btc_prediction/models/: __init__.py  ensemble.py  fusion.py  heads.py  predictor.py  regime.py
btc_prediction/models/components/: __init__.py  attention.py  gnn.py  tcn.py  wavenet.py
btc_prediction/models/encoders/: __init__.py  cross_asset.py  onchain.py  orderbook.py  sentiment.py  temporal.py
btc_prediction/utils/: logging.py  metrics.py
docs/: ARCHITECTURE.md  REFERENCES.md  RESEARCH_FINDINGS.md
